tests/errors/invalid_assignment.ne
function main(): int32
{
    notString: int64;
    notString = "String";
    return 0;
}